cmake_minimum_required(VERSION 3.15)
project(AudioTrace)
set(CMAKE_CXX_STANDARD 17)
find_package(PkgConfig REQUIRED)
pkg_check_modules(SNDFILE REQUIRED sndfile)
pkg_check_modules(FFTW REQUIRED fftw3)
add_executable(audiotrace main.cpp)
target_include_directories(audiotrace PRIVATE ${SNDFILE_INCLUDE_DIRS} ${FFTW_INCLUDE_DIRS})
target_link_libraries(audiotrace PRIVATE ${SNDFILE_LIBRARIES} ${FFTW_LIBRARIES})